# GoldBoost

./: .env.prod  .env.prod.db  C7375380888E8ABE294C1F6B312A1A4F.txt  Dockerfile  Makefile  conftest.py  db.json  docker-compose.yml  docker-entrypoint.sh  dump.rdb  experiment.py  pyproject.toml  pytest.ini  test.html  test.py  test_fixture.py
config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
docker/postgres/: Dockerfile  init.sql
locale/en/LC_MESSAGES/: django.po
locale/ua/LC_MESSAGES/: django.mo  django.po
locale/uk/LC_MESSAGES/: django.mo  django.po
media/: C7375380888E8ABE294C1F6B312A1A4F.txt
nginx/: nginx.conf
src/: __init__.py
src/core/: admin.py  models.py
src/core/migrations/: 0001_initial.py  0002_initial.py  0003_alter_promocode_code.py
src/games/: admin.py  api.py  apps.py  models.py  schemas.py  translation.py
src/games/managers/: catalog_manager.py  game_manager.py
src/games/migrations/: 0001_initial.py  0002_alter_catalogpage_options_catalogpage_order.py  0002_alter_game_name.py  0002_alter_team_team_img.py  0003_tab_title.py  (+12 more)
src/main/: admin.py  api.py  apps.py  middleware.py  models.py  schemas.py  tasks.py  translation.py  utils.py
src/orders/: admin.py  api.py  apps.py  models.py  schemas.py  tasks.py
src/products/: __init__.py  admin.py  api.py  apps.py  models.py  schemas.py  translation.py  utils.py
src/users/: admin.py  api.py  authentication.py  models.py  schemas.py  tasks.py  utils.py
src/website/: api.py  models.py  urls.py
templates/auth/: index.html
templates/statistic/: index.html
(+112 files in other folders)
